--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,9 @@
 		        <category android:name="android.intent.category.DEFAULT" />
 		    </intent-filter>
 		</activity>
+		<activity android:name="com.quitit.android.RunningTally"
+			android:label="@string/app_name"></activity>
+		<activity android:name="com.quitit.android.GetExtraActivity"></activity>
         <receiver android:name=".QuitItProvider" >
     		<intent-filter>
         		<action android:name="android.appwidget.action.APPWIDGET_UPDATE" 
