--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".AppWidgetConfigure">
+        <activity android:name="com.quitit.android.AppWidgetConfigure">
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
 		        <category android:name="android.intent.category.LAUNCHER" />
@@ -12,7 +12,8 @@
 		    </intent-filter>
 		</activity>
 		<activity android:name="com.quitit.android.RunningTally"
-			android:label="@string/app_name"></activity>
+			android:label="@string/app_name">
+		</activity>
 		<activity android:name="com.quitit.android.GetExtraActivity"></activity>
         <receiver android:name=".QuitItProvider" >
     		<intent-filter>
