--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.quitit.android"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/quitit_icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="com.quitit.android.AppWidgetConfigure">
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
@@ -14,6 +14,7 @@
 		<activity android:name="com.quitit.android.RunningTally"
 			android:label="@string/app_name">
 		</activity>
+		<activity android:name=".AboutActivity" />
 		<activity android:name="com.quitit.android.GetExtraActivity"></activity>
         <receiver android:name=".QuitItProvider" >
     		<intent-filter>
