#Added images. #Implement service to display notifications. #One more comment to see if pound symbol works to start new line

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,8 +25,8 @@
                	android:resource="@xml/quitit_provider" 
                	/>
 		</receiver>
-
+<service android:name=".NotifyingService" />
     </application>
-
+<uses-sdk android:minSdkVersion="7" />
 
 </manifest> 
